--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ p {
 .fourrowel {
   width: calc((100% - 90px) / 4);
   margin-right: 30px;
+
 }
 
 .flexlist .fourrowel:last-child,
@@ -85,15 +86,18 @@ p {
 }
 
 /* индивидуальные */
+.comelement {
+  background-color: var(--opposite-text-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
-.nav-container {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
+.portfolioelement {
+  background-color: var(--opposite-text-color);
+  border: 1px solid #EEEEEE;
+
 }
 
 .maxindented {
@@ -103,11 +107,8 @@ p {
 }
 
 .container-banner {
-  /* align-items: center; */
-  /* max-width: 696px;  - если ставить текст уезжает влево*/
+  max-width: 696px;
   text-align: center;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .order-title {
@@ -133,7 +134,7 @@ p {
   margin-left: auto;
 }
 
-.main-menu .item + .item {
+.main-menu .item+.item {
   margin-left: 50px;
 }
 
@@ -152,7 +153,7 @@ p {
   justify-content: center;
 }
 
-.main-filters .item + .item {
+.main-filters .item+.item {
   margin-left: 8px;
 }
 
@@ -169,7 +170,12 @@ p {
   padding-bottom: 60px;
 }
 
-.header {
+.header .container {
+  display: flex;
+  align-items: center;
+}
+
+.flexnav {
   display: flex;
   align-items: center;
 }
@@ -270,7 +276,6 @@ footer,
 .button {
   display: inline-block;
   min-width: 200px;
-  margin: 10px 32px;
   border-radius: 4px;
   border: none;
   font-weight: 700;
